# DocForge

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  bootstrap_action_plan.md  compose.yaml  main.py  pyproject.toml
config/: default.toml
docforge/app/: app.py
docforge/core/: config.py  constants.py  errors.py  settings.py
docforge/projects/: manager.py
docforge/security/: encryption.py
docforge/template/: template_parser.py
docker/dev/: .env  Dockerfile  compose.yaml
docker/production/: .env  Dockerfile  compose.yaml
docs/dev_docs/: docforge-architecture.md
scripts/: run.ps1
