[project]
name = "docforge"
version = "0.1.0"
description = "Offline-first agentic RAG document generator for documentation with template aware output, multimodal ingestion, OCR, code analysis, LANCEDB retrieval and local Ollama LLMS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.49.0",
]
