[project]
name = "docforge"
version = "0.1.0"
description = "Offline-first agentic RAG document generator for documentation with template aware output, multimodal ingestion, OCR, code analysis, LANCEDB retrieval and local Ollama LLMS"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "docx>=0.2.4",
    "lancedb>=0.33.0",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.1",
    "pyfiglet>=1.0.4",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "streamlit>=1.58.0",
    "streamlit-aggrid>=1.2.1.post2",
    "streamlit-extras>=1.6.0",
    "uvicorn>=0.49.0",
]
